Correcting logo size on mobile

--- a/src/styles/styles.styl
+++ b/src/styles/styles.styl
@@ -13,8 +13,12 @@ i.icon
     padding-bottom 0.5em !important
 
 #logo
-  padding 1em
-  
+  padding 1em 0
+
+@media only screen and (min-width: 1000px) 
+  #logo
+    padding 1em
+    
 #menu
   background none transparent
   border none
